# Clawith

./: README.md  README_zh-CN.md  docker-compose.yml
backend/: pyproject.toml  seed.py
backend/alembic/versions/: add_agent_triggers.py  add_agent_usage_fields.py
backend/app/: main.py
backend/app/api/: advanced.py  discord_bot.py  enterprise.py  feishu.py  websocket.py
backend/app/schemas/: schemas.py
backend/app/services/: agent_context.py  agent_tools.py  autonomy_service.py  discord_gateway.py  feishu_service.py  feishu_ws.py  llm_client.py  org_sync_service.py  resource_discovery.py
frontend/: nginx.conf
frontend/src/: index.css  main.tsx
frontend/src/components/: ChannelConfig.tsx  ErrorBoundary.tsx
frontend/src/i18n/: en.json  zh.json
frontend/src/pages/: AgentDetail.tsx  EnterpriseSettings.tsx  Layout.tsx  Login.tsx
frontend/src/services/: api.ts
